--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.4.0-beta4.tar.xz: 336d68b0ceaf0c0a718d93539d4a57329eec3e1b
+  qttranslations-everywhere-src-6.4.0-rc.tar.xz: 8e9d2b211ef5ed98a32d89f03333fb5e1ac559af
