--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.4.0-rc.tar.xz: 8e9d2b211ef5ed98a32d89f03333fb5e1ac559af
+  qttranslations-everywhere-src-6.4.0.tar.xz: cde3277afcce1787c51c8361d701239f520a92f4
