Update to 6.6.0-beta1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.5.1.tar.xz: 81a77626346cbecc67bf095f9e7ced94928a9603
+  qttranslations-everywhere-src-6.6.0-beta1.tar.xz: d570565c394a78f41e84f20e1474c90fd6242007
