Update to 6.6.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.6.0-beta4.tar.xz: 5c274c8b85e40b0187ad794909a000d288252316
+  qttranslations-everywhere-src-6.6.0-rc.tar.xz: a8d7d35b2cbb1053c63b3dec1d4f2f4eb2177119
