--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.6.0-rc.tar.xz: a8d7d35b2cbb1053c63b3dec1d4f2f4eb2177119
+  qttranslations-everywhere-src-6.6.0.tar.xz: 27e3e7062c932c46e134d9ee4d71b2307bb3bf0f
