Update to 6.7.0-beta1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.6.1.tar.xz: 13f6c1812485336bdee301b81dc89b51637a6dd9
+  qttranslations-everywhere-src-6.7.0-beta1.tar.xz: f6075594347d1f1a24c1e92092b1d23754073eb2
