Update to 6.7.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.7.0-beta3.tar.xz: 3530ae59904b600c042e2d62961400da32d75428
+  qttranslations-everywhere-src-6.7.0-rc.tar.xz: a408afa741b6aba60746cb80d4a7cdfcd1e24068
