Update to 6.7.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.7.0-rc.tar.xz: a408afa741b6aba60746cb80d4a7cdfcd1e24068
+  qttranslations-everywhere-src-6.7.0-rc2.tar.xz: 81ed970496f4f9104b80a5b91bea87e0999843fb
