--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.7.0-rc2.tar.xz: 81ed970496f4f9104b80a5b91bea87e0999843fb
+  qttranslations-everywhere-src-6.7.0.tar.xz: 2cf15c1e0495c24d0e6c141d706774dee6a05c2e
