--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.9.0-rc.tar.xz: 6c8879a858fb37c90035ca2f05343eae4e41afd7
+  qttranslations-everywhere-src-6.9.0.tar.xz: 14e1a09dca344bb8c5baffa19aa7bdcce5bd0ace
