Update to 6.10.0-beta2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.9.1.tar.xz: 062956abf557913674b7446fbe1c5ce144b7dcb1
+  qttranslations-everywhere-src-6.10.0-beta2.tar.xz: ba288a97a6822f33c7b891752fec580de49c6db5
