Update to 6.10.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.10.0-beta3.tar.xz: 55f47cdbeeb4ca3c30464467c851b04f9185646d
+  qttranslations-everywhere-src-6.10.0-rc.tar.xz: 0fbdc5834899eedff16067c37bdd56d9465cea6d
