--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qttranslations-everywhere-src-6.10.0-rc.tar.xz: 0fbdc5834899eedff16067c37bdd56d9465cea6d
+  qttranslations-everywhere-src-6.10.0.tar.xz: 2d1a286bdd9999eab370160d07469744cc334f40
